# sotest

./: .env.tmpl  README.md  build_kb.py  chat.py  pyproject.toml
sotest/: embed.py
